<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleLoggerGps</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="buttonSetting">設定</string>
    <string name="notAcquired">未取得</string>
    <string name="providerList">プロバイダリスト</string>
    <string name="gpsProviderValue">GPSプロバイダの値</string>
    <string name="networkProviderValue">ネットワークプロバイダの値</string>
    <string name="latiude">緯度(度)</string>
    <string name="longitude">経度(度)</string>
    <string name="altitude">標高(海抜ｍ)</string>
    <string name="speed">速度(m/s)</string>
    <string name="accuracy">推定精度(m)</string>
    <string name="bearing">ベアリング(度)</string>
    <string name="time_utc">測位時刻(UTC)</string>
    <string name="time_convert">時間(変換値)</string>
    <string name="nmeaMessage">NMEA メッセージ</string>
    <string name="GPGSVtitle">GPGSV:受信衛星情報</string>
    <string name="GPGSVtotalNumberMessage">メッセージ総数</string>
    <string name="GPGSVmessageNumber">メッセージ番号</string>
    <string name="GPGSVviewNumber">捕捉衛星数</string>
    <string name="GPGSVsvPRNnumber1">1衛星PRN番号</string>
    <string name="GPGSVsvPRNnumber2">2衛星PRN番号</string>
    <string name="GPGSVsvPRNnumber3">3衛星PRN番号</string>
    <string name="GPGSVsvPRNnumber4">4衛星PRN番号</string>
    <string name="GPGSVelevation1">1仰角</string>
    <string name="GPGSVelevation2">2仰角</string>
    <string name="GPGSVelevation3">3仰角</string>
    <string name="GPGSVelevation4">4仰角</string>
    <string name="GPGSVazimuth1">1方位角</string>
    <string name="GPGSVazimuth2">2方位角</string>
    <string name="GPGSVazimuth3">3方位角</string>
    <string name="GPGSVazimuth4">4方位角</string>
    <string name="GPGSVsnr1">1信号強度</string>
    <string name="GPGSVsnr2">2信号強度</string>
    <string name="GPGSVsnr3">3信号強度</string>
    <string name="GPGSVsnr4">4信号強度</string>
    <string name="GPGGAlatitudePosition">緯度方向</string>
    <string name="GPGGAlongitudePosition">経度方向</string>
    <string name="GPGGAgpsFix">GPS品位</string>
    <string name="GPGGAnumberOfSatellites">測位利用衛星数</string>
    <string name="GPGGAhorizontalDilutionOfPrecision">水平精度低下率</string>
    <string name="GPGGAaltitude">海抜標高(geoid)</string>
    <string name="GPGGAaltitudeUnit">海抜標高単位</string>
    <string name="GPGGAheightOfGeoid">ジオイド高さ</string>
    <string name="GPGGAheightOfGeoidUniy">ジオイド高さ単位</string>
    <string name="GPGGAupdeteOfDGPS">DGPS 補正暦</string>
    <string name="GPGGAidOfDGPS">DGPS基準局ID</string>
    <string name="GPGGAtitle">GPGGA:総合測位</string>
    <string name="GPRMCtitle">GPRMC:必要最小情報</string>
    <string name="GPRMCdataStatus">測位状態</string>
    <string name="GPRMCspeed">対地速度(ノット)</string>
    <string name="GPMRCtrueCourse">進行方向</string>
    <string name="GPRMCdateStamp">測位日付</string>
    <string name="GPRMCvariation">磁気偏差量(度)</string>
    <string name="GPRMCeastOrWest">磁気偏差方向</string>
    <string name="tvGPVTGtitle">GPVTG:対地速度</string>
    <string name="GPVTGspeed">対地速度</string>
    <string name="GPVTGunit">単位</string>
    <string name="GPVTGcource">移動方向</string>
    <string name="GPVTGreference">方位基準</string>
    <string name="tvGPGSAtitle">GPGSA:測位に関するデータ</string>
    <string name="tvGPGSAtype">特定タイプ</string>
    <string name="tvGPGSAid1">衛星番号1</string>
    <string name="tvGPGSAid2">衛星番号2</string>
    <string name="tvGPGSAid3">衛星番号3</string>
    <string name="tvGPGSAid4">衛星番号4</string>
    <string name="tvGPGSAid5">衛星番号5</string>
    <string name="tvGPGSAid6">衛星番号6</string>
    <string name="tvGPGSAid7">衛星番号7</string>
    <string name="tvGPGSAid8">衛星番号8</string>
    <string name="tvGPGSAid9">衛星番号9</string>
    <string name="tvGPGSAid10">衛星番号10</string>
    <string name="tvGPGSAid11">衛星番号11</string>
    <string name="tvGPGSAid12">衛星番号12</string>
    <string name="tvGPGSApdop">位置精度低下率</string>
    <string name="tvGPGSAhdop">水平精度低下率</string>
    <string name="tvGPGSAvdop">垂直精度低下率</string>
    <string name="NMEAmode">モード</string>
    <string name="NMEAchecksum">チェックサム</string>
    <string name="buttonLog">ログ</string>
    <string name="title_activity_nmea">NmeaActivity</string>
    <string name="title_activity_setting_preference">SettingPreferenceActivity</string>
    <string name="diaLogSpan">間　　隔</string>
    <string name="diaLogTime">記録時間</string>
    <string name="diaLogMinutu">分</string>
    <string name="help">ヘルプ</string>

</resources>