<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvGpssv00"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GPGSVtitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvGPGSVrawData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notAcquired" />

        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvGpssv01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/marginRight"
                android:text="@string/GPGSVtotalNumberMessage" />

            <TextView
                android:id="@+id/tvGpssv02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPGSVmessageNumber" />

            <TextView
                android:id="@+id/tvGpssv03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPGSVviewNumber" />

            <TextView
                android:id="@+id/tvGpssv04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPGSVsvPRNnumber1" />

            <TextView
                android:id="@+id/tvGpssv05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPGSVelevation1" />

            <TextView
                android:id="@+id/tvGpssv06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPGSVazimuth1" />

            <TextView
                android:id="@+id/tvGpssv07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPGSVsnr1" />

            <TextView
                android:id="@+id/tvGpssv08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPGSVsvPRNnumber2" />

            <TextView
                android:id="@+id/TextvGpssv09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPGSVelevation2" />

            <TextView
                android:id="@+id/tvGpssv10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPGSVazimuth2" />

            <TextView
                android:id="@+id/tvGpssv11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPGSVsnr2" />

            <TextView
                android:id="@+id/tvGpssv12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPGSVsvPRNnumber3" />

            <TextView
                android:id="@+id/tvGpssv13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPGSVelevation3" />

            <TextView
                android:id="@+id/tvGpssv14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPGSVazimuth3" />

            <TextView
                android:id="@+id/tvGpssv15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPGSVsnr3" />

            <TextView
                android:id="@+id/tvGpssv16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPGSVsvPRNnumber4" />

            <TextView
                android:id="@+id/tvGpssv17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPGSVelevation4" />

            <TextView
                android:id="@+id/tvGpssv18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPGSVazimuth4" />

            <TextView
                android:id="@+id/tvGpssv19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPGSVsnr4" />

            <TextView
                android:id="@+id/tvGpssv20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NMEAchecksum" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llGPGSVdata"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
