<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nmeaMessage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/marginRight"
            android:text="@string/time_utc" />

        <TextView
            android:id="@+id/tvGPGSVtimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notAcquired" />
    </LinearLayout>

</LinearLayout>